[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/fundo-pedras-lobis.png" type="Texture" id=2]
[ext_resource path="res://resources/assets/sherlock-wolf-logo.png" type="Texture" id=3]
[ext_resource path="res://resources/assets/botao-procurar-jogo-criar.png" type="Texture" id=4]
[ext_resource path="res://resources/Antonio-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/assets/input-nome-jogador.png" type="Texture" id=6]
[ext_resource path="res://resources/Antonio-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://resources/assets/ok-cancela.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 7 )

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="BG" type="Control" parent="."]
margin_right = 576.0
margin_bottom = 1024.0

[node name="fundo-pedras-lobis" type="Sprite" parent="BG"]
texture = ExtResource( 2 )
centered = false

[node name="sherlock-wolf-logo" type="Sprite" parent="BG"]
position = Vector2( 283.025, 222.741 )
texture = ExtResource( 3 )

[node name="Join" type="TextureButton" parent="BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -139.0
margin_right = 238.0
margin_bottom = -40.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="BG"]
margin_left = 94.0
margin_top = 389.0
margin_right = 498.0
margin_bottom = 445.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.156863, 0.121569, 0.121569, 1 )
text = "Procurar Partida"
align = 1
valign = 1

[node name="Host" type="TextureButton" parent="BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.5
margin_top = 3.5
margin_right = 238.5
margin_bottom = 118.5
texture_normal = ExtResource( 4 )

[node name="Label2" type="Label" parent="BG"]
margin_left = 94.0
margin_top = 532.0
margin_right = 498.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.156863, 0.121569, 0.121569, 1 )
text = "Criar Partida"
align = 1
valign = 1

[node name="PopUpJoin" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_right = 576.0
margin_bottom = 1024.0

[node name="Fade" type="ColorRect" parent="PopUpJoin"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.207843 )

[node name="Background" type="ColorRect" parent="PopUpJoin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -92.0
margin_right = 209.0
margin_bottom = 92.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="BG" type="Control" parent="PopUpJoin"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = 16.0
margin_right = 50.0
margin_bottom = 56.0

[node name="input-nome-jogador" type="Sprite" parent="PopUpJoin/BG"]
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="PopUpJoin/BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = -124.0
margin_right = 103.5
margin_bottom = -66.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.129412, 0.129412, 0.129412, 1 )
text = "Digite seu nome:"

[node name="Name" type="LineEdit" parent="PopUpJoin/BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -65.0
margin_right = 166.0
margin_bottom = -5.0

[node name="BtnOkJoin" type="TextureButton" parent="PopUpJoin/BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = 4.0
margin_right = -34.0
margin_bottom = 65.0
texture_normal = ExtResource( 8 )

[node name="Label2" type="Label" parent="PopUpJoin/BG"]
margin_left = -155.0
margin_top = 28.0
margin_right = -24.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.196078, 0.164706, 0.12549, 1 )
text = "OK"
align = 1
valign = 1

[node name="BtnCancelJoin" type="TextureButton" parent="PopUpJoin/BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = 4.0
margin_right = 147.0
margin_bottom = 65.0
texture_normal = ExtResource( 8 )

[node name="Label3" type="Label" parent="PopUpJoin/BG"]
margin_left = 26.0
margin_top = 28.0
margin_right = 157.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.196078, 0.164706, 0.12549, 1 )
text = "Cancelar"
align = 1
valign = 1

[node name="PopUpHost" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_right = 576.0
margin_bottom = 1024.0

[node name="Fade" type="ColorRect" parent="PopUpHost"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.207843 )

[node name="Background" type="ColorRect" parent="PopUpHost"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -92.0
margin_right = 209.0
margin_bottom = 92.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="BG" type="Control" parent="PopUpHost"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = 16.0
margin_right = 50.0
margin_bottom = 56.0

[node name="input-nome-jogador" type="Sprite" parent="PopUpHost/BG"]
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="PopUpHost/BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = -124.0
margin_right = 103.5
margin_bottom = -66.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.129412, 0.129412, 0.129412, 1 )
text = "Digite seu nome:"

[node name="Name" type="LineEdit" parent="PopUpHost/BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -65.0
margin_right = 166.0
margin_bottom = -5.0

[node name="BtnOkHost" type="TextureButton" parent="PopUpHost/BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = 4.0
margin_right = -34.0
margin_bottom = 65.0
texture_normal = ExtResource( 8 )

[node name="Label2" type="Label" parent="PopUpHost/BG"]
margin_left = -155.0
margin_top = 28.0
margin_right = -24.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.196078, 0.164706, 0.12549, 1 )
text = "OK"
align = 1
valign = 1

[node name="BtnCancelHost" type="TextureButton" parent="PopUpHost/BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = 4.0
margin_right = 147.0
margin_bottom = 65.0
texture_normal = ExtResource( 8 )

[node name="Label3" type="Label" parent="PopUpHost/BG"]
margin_left = 26.0
margin_top = 28.0
margin_right = 157.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.196078, 0.164706, 0.12549, 1 )
text = "Cancelar"
align = 1
valign = 1

[node name="PopUpError" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Fade" type="ColorRect" parent="PopUpError"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.207843 )

[node name="Background" type="ColorRect" parent="PopUpError"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -92.0
margin_right = 209.0
margin_bottom = 92.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Label" type="Label" parent="PopUpError"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -81.0
margin_right = 175.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.129412, 0.129412, 0.129412, 1 )
text = "Não foi possível criar uma partida"
align = 1
valign = 1
autowrap = true

[node name="BtnError" type="Button" parent="PopUpError"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = 40.0
margin_right = 52.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
text = "OK"

[node name="PopUpError2" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Fade" type="ColorRect" parent="PopUpError2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.207843 )

[node name="Background" type="ColorRect" parent="PopUpError2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -92.0
margin_right = 209.0
margin_bottom = 92.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Label" type="Label" parent="PopUpError2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -81.0
margin_right = 175.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.129412, 0.129412, 0.129412, 1 )
text = "A conexão com o servidor foi perdida"
align = 1
valign = 1
autowrap = true

[node name="BtnError2" type="Button" parent="PopUpError2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = 40.0
margin_right = 52.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
text = "OK"
[connection signal="pressed" from="BG/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="BG/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="PopUpJoin/BG/BtnOkJoin" to="." method="_on_BtnOkJoin_pressed"]
[connection signal="pressed" from="PopUpJoin/BG/BtnCancelJoin" to="." method="_on_BtnCancelJoin_pressed"]
[connection signal="pressed" from="PopUpHost/BG/BtnOkHost" to="." method="_on_BtnOkHost_pressed"]
[connection signal="pressed" from="PopUpHost/BG/BtnCancelHost" to="." method="_on_BtnCancelHost_pressed"]
[connection signal="pressed" from="PopUpError/BtnError" to="." method="_on_BtnError_pressed"]
[connection signal="pressed" from="PopUpError2/BtnError2" to="." method="_on_BtnError2_pressed"]
